added trending page

--- a/app/templates/product_detail.html
+++ b/app/templates/product_detail.html
@@ -23,6 +23,9 @@
       <a href="{{ url_for('main.categories_page') }}" class="nav-button">
         <i class="fas fa-search"></i> Search by Category
       </a>
+      <a href="{{ url_for('main.trending_products') }}" class="nav-button">
+        <i class="fas fa-fire"></i> Trending Products
+      </a>
     </nav>
   </header>
 
