--- a/app/templates/multiple_category_search.html
+++ b/app/templates/multiple_category_search.html
@@ -23,6 +23,9 @@
             <a href="{{ url_for('main.categories_page') }}" class="nav-button">
                 <i class="fas fa-search"></i> Search by Category
             </a>
+            <a href="{{ url_for('main.trending_products') }}" class="nav-button">
+                <i class="fas fa-fire"></i> Trending Products
+            </a>
         </nav>
     </header>
 
@@ -65,9 +68,10 @@
             <label for="sort-select">Sort by:</label>
             <select id="sort-select">
                 <option value="">Select Sort By</option>
-                <option value="title">Title</option>
+                <option value="title">Product Name</option>
                 <option value="total_score">Total Score</option>
                 <option value="avg_rating">Average Rating</option>
+                <option value="salesrank">SalesRank</option>
             </select>
 
             <label for="order-select">Order:</label>
