--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -25,6 +25,9 @@
             <a href="{{ url_for('main.trending_products') }}" class="nav-button">
                 <i class="fas fa-fire"></i> Trending Products
             </a>
+            <a href="{{ url_for('main.top_users') }}" class="nav-button">
+                <i class="fas fa-users"></i> Top Reviewers
+            </a>
         </nav>
     </header>
 
